--- a/index.html
+++ b/index.html
@@ -4,13 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escaneo de Código QR</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; }
-        #auth { display: block; }
-        #app { display: none; }
-        #video { width: 100%; height: auto; border: 1px solid black; margin-bottom: 20px; }
-        #output { margin-top: 20px; font-size: 1.2em; font-weight: bold; color: green; }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- Conexión del CSS externo -->
     <script type="module" src="script.js"></script>
 </head>
 <body>
