--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
     <script type="module" src="script.js"></script>
 </head>
 <body>
-    <!-- Pantalla de autenticación (registro e inicio de sesión) -->
+    <!-- Pantalla de Autenticación -->
     <div id="auth">
         <h1>Autenticación</h1>
-
-        <!-- Formulario de registro -->
         <div id="register-form">
             <h2>Registro</h2>
             <input type="email" id="register-email" placeholder="Correo electrónico" required><br>
             <input type="password" id="register-password" placeholder="Contraseña" required><br>
             <button id="register-btn">Registrar</button>
         </div>
-
-        <!-- Formulario de inicio de sesión -->
         <div id="login-form">
             <h2>Iniciar Sesión</h2>
             <input type="email" id="login-email" placeholder="Correo electrónico" required><br>
@@ -29,7 +25,7 @@
         </div>
     </div>
 
-    <!-- Aplicación principal -->
+    <!-- Pantalla de Escaneo -->
     <div id="app">
         <h1>Bienvenido, <span id="user-name"></span></h1>
         <p>Marcador: <span id="score">0</span></p>
@@ -40,7 +36,6 @@
         <div id="output">Esperando código QR...</div>
     </div>
 
-    <!-- Incluye la biblioteca jsQR -->
     <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
 </body>
 </html>
