--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <!-- Aplicación principal -->
-    <div id="app" style="display: none;">
+    <div id="app">
         <h1>Bienvenido, <span id="user-name"></span></h1>
         <p>Marcador: <span id="score">0</span></p>
         <video id="video" autoplay playsinline></video>
